approved by 1st curator

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
     "element-closest": "^3.0.2",
+    "mdn-polyfills": "^5.20.0",
     "polyfill-nodelist-foreach": "^1.0.1"
   },
   "description": ""
